JSW Devsb/src/objects/District_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>District__r.Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_DT__c</fullName>
        <formula>District_Code__c +&apos;:&apos;+ Product_Group__c +&apos;:&apos;+ Month__c +&apos;:&apos;+ Division__c +&apos;:&apos;+ Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code DT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Actual__c</fullName>
        <formula>( District_Trade_Actuals__c  +  District_Non_Trade_Actuals__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Actuals__c</fullName>
        <label>District Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Non_Trade_Actuals__c</fullName>
        <label>District Non Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Pro_Rata_Acheivement__c</fullName>
        <formula>(District_Actual__c  /  MTD_Target__c) * 100</formula>
        <label>District Pro Rata Acheivement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Pro_Rata_Asking_Rate__c</fullName>
        <formula>(( District_Target__c  -  District_Actual__c ) / ( No_of_Days_in_a_Month__c  -  No_of_Days_MTD__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Pro-Rata Asking Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_Trade_Actuals__c</fullName>
        <label>District Trade Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>District Targets</relationshipLabel>
        <relationshipName>District_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGBS_Actuals__c</fullName>
        <label>GGBS Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institutional_Actuals__c</fullName>
        <label>Institutional Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Target__c</fullName>
        <formula>( No_of_Days_MTD__c /  No_of_Days_in_a_Month__c ) *  District_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days_MTD__c</fullName>
        <formula>IF( MONTH( TODAY() ) = MONTH(  Target_Start_Date__c ) , DAY(TODAY()) - 1, 
 No_of_Days_in_a_Month__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_a_Month__c</fullName>
        <label>No of Days in a Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEZ_Actuals__c</fullName>
        <label>District SEZ Actuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>District Targets</relationshipLabel>
        <relationshipName>District_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_State__c</fullName>
        <formula>District__r.Sub_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Targets__c</fullName>
        <label>Targets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Percentage__c</fullName>
        <formula>( District_Trade_Actuals__c  /  District_Actual__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Target__c</fullName>
        <label>Type of Target</label>
        <picklist>
            <picklistValues>
                <fullName>Trade_NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>District__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>District Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Target_Start_Date__c</columns>
        <columns>District_Code__c</columns>
        <columns>District__c</columns>
        <columns>State__c</columns>
        <columns>State_Code__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>District_Target__c</columns>
        <columns>District_Trade_Actuals__c</columns>
        <columns>District_Non_Trade_Actuals__c</columns>
        <columns>District_Actual__c</columns>
        <columns>No_of_Days_in_a_Month__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>District Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>District Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>